--- a/HandyRL/config.yaml
+++ b/HandyRL/config.yaml
@@ -1,7 +1,7 @@
 
 env_args:
-    env: 'handyrl.envs.ahc008'
-    #env: 'TicTacToe'
+    #env: 'handyrl.envs.ahc008'
+    env: 'TicTacToe'
     #env: 'Geister'
     #env: 'HungryGeese'
     #env: 'handyrl.envs.parallel_tictactoe'  # specify by path
