--- a/HandyRL/config.yaml
+++ b/HandyRL/config.yaml
@@ -1,13 +1,13 @@
 
 env_args:
     #env: 'handyrl.envs.ahc008'
-    env: 'TicTacToe'
+    #env: 'TicTacToe'
     #env: 'Geister'
     #env: 'HungryGeese'
-    #env: 'handyrl.envs.parallel_tictactoe'  # specify by path
+    env: 'handyrl.envs.parallel_tictactoe'  # specify by path
 
 train_args:
-    turn_based_training: True
+    turn_based_training: False
     observation: False
     gamma: 0.8
     forward_steps: 16
